fix browser height detection and CSS on IE8

--- a/inst/www/shared/shiny-showcase.css
+++ b/inst/www/shared/shiny-showcase.css
@@ -80,3 +80,7 @@
   display: block;
   text-align: right;
 }
+
+#showcase-code-content pre {
+  background-color: white;
+}
